--- a/index.html
+++ b/index.html
@@ -20,21 +20,49 @@
       font-weight: bold;
       background: rgba(0, 0, 0, 0.2);
     }
+    .top-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      width: 90%;
+      max-width: 1100px;
+      margin: 20px auto;
+      gap: 20px;
+    }
     .selector {
+      flex: 1;
       background: #fff;
       color: #000;
       border-radius: 10px;
-      width: 90%;
-      max-width: 800px;
-      margin: 20px auto;
       padding: 20px;
-      text-align: center;
+      min-width: 280px;
+      max-width: 450px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
     select {
       padding: 10px;
-      margin: 10px;
+      margin: 10px 0;
       border-radius: 8px;
       font-size: 1rem;
+      width: 100%;
+    }
+    .imagen-container {
+      flex: 1;
+      text-align: center;
+      min-width: 280px;
+    }
+    .imagen-container img {
+      width: 100%;
+      max-width: 400px;
+      border-radius: 10px;
+      border: 4px solid #fff;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+    }
+    .imagen-container h3 {
+      margin-bottom: 10px;
+      color: #fff;
+      font-weight: normal;
     }
     .grid {
       display: grid;
@@ -49,6 +77,7 @@
       border-radius: 10px;
       padding: 10px;
       color: #000;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.3);
     }
     footer {
       text-align: center;
@@ -61,19 +90,26 @@
 <body>
   <header>CURVAS DE BOMBAS - MSbombas.cl</header>
 
-  <div class="selector">
-    <label>Serie:</label>
-    <select id="serieSelect"></select>
+  <div class="top-container">
+    <div class="selector">
+      <label>Serie:</label>
+      <select id="serieSelect"></select>
 
-    <label>Modelo:</label>
-    <select id="modeloSelect"></select>
+      <label>Modelo:</label>
+      <select id="modeloSelect"></select>
 
-    <div id="rpmContainer" style="display:none;">
-      <label>RPM:</label>
-      <select id="rpmSelect">
-        <option value="1450">1450</option>
-        <option value="2900">2900</option>
-      </select>
+      <div id="rpmContainer" style="display:none;">
+        <label>RPM:</label>
+        <select id="rpmSelect">
+          <option value="1450">1450</option>
+          <option value="2900">2900</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="imagen-container">
+      <h3 id="tituloImagen">Seleccione una serie</h3>
+      <img id="imagenSerie" src="" alt="Imagen de bomba" style="display:none;">
     </div>
   </div>
 
@@ -102,6 +138,8 @@
     const modeloSelect = document.getElementById("modeloSelect");
     const rpmContainer = document.getElementById("rpmContainer");
     const rpmSelect = document.getElementById("rpmSelect");
+    const imagenSerie = document.getElementById("imagenSerie");
+    const tituloImagen = document.getElementById("tituloImagen");
 
     function cargarSeries() {
       serieSelect.innerHTML = '<option value="">Seleccione Serie</option>';
@@ -123,6 +161,13 @@
           opt.textContent = m.codigo;
           modeloSelect.appendChild(opt);
         });
+        // Mostrar imagen de la serie
+        imagenSerie.src = serie.imagen;
+        imagenSerie.style.display = "block";
+        tituloImagen.textContent = `Serie ${serie.nombre} - Referencia Visual`;
+      } else {
+        imagenSerie.style.display = "none";
+        tituloImagen.textContent = "Seleccione una serie";
       }
       limpiarGraficos();
     });
